(#11) fix(home-page): fix hero height and set page overflow to auto

--- a/static/css/pages/home.css
+++ b/static/css/pages/home.css
@@ -1,4 +1,4 @@
-section.hero {
+body {
   background-image: url("/static/img/bg_home.jpg");
   background-size: cover;
 }
